chapter 03. update page

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MovieContext": "Data Source=MvcMovie.db"
+    "MovieContext": "Server=localhost,14333;Database=MovieDB_Test;user id=sa;password=1q2w3e!@;MultipleActiveResultSets=true",
   }
 }
