--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RazorPagesMovieContext": "Server=localhost,14333;Database=MovieDB;user id=sa;password=1q2w3e!@;MultipleActiveResultSets=true"
 }
